--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@nx/eslint-plugin": "17.2.6",
     "@nx/jest": "17.2.6",
     "@nx/js": "17.2.6",
+    "@nx/web": "17.2.6",
+    "@nx/webpack": "17.2.6",
     "@nx/workspace": "17.2.6",
     "@schematics/angular": "~17.0.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
